--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,10 @@
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
 
-#*.iml
+# *.iml
 
 ## Directory-based project format:
-.idea/
+# .idea/
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
