--- a/slot-ts/tsconfig.json
+++ b/slot-ts/tsconfig.json
@@ -1,25 +1,13 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
+    "baseUrl": ".",
+    "paths": {
+      "openfl": ["node_modules/openfl/lib/openfl"],
+      "openfl/*": ["node_modules/openfl/lib/openfl/*"]
+    },
+    "lib": ["es2017", "dom"],
+    "sourceMap": true
   },
-  "include": [
-    "src"
-  ]
+  "files": ["src/SlotEngine.ts"]
 }
