--- a/slot-ts/tsconfig.json
+++ b/slot-ts/tsconfig.json
@@ -2,6 +2,10 @@
   "compilerOptions": {
     "target": "es5",
     "baseUrl": ".",
+    "paths": {
+      "openfl": ["node_modules/openfl/lib/openfl"],
+      "openfl/*": ["node_modules/openfl/lib/openfl/*"]
+    },
     "lib": ["es2017", "dom"],
     "sourceMap": true
   },
